apply plugin: 'com.android.application'

android {
    namespace 'com.coderpage.mine'
    compileSdkVersion rootProject.compileSdkVersion
    defaultConfig {
        applicationId rootProject.applicationId
        minSdkVersion rootProject.minSdkVersion
        targetSdkVersion rootProject.targetSdkVersion
        versionCode rootProject.appVersionCode
        versionName rootProject.appVersionName
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary true
        multiDexEnabled true

        javaCompileOptions {
            annotationProcessorOptions {
                arguments = [AROUTER_MODULE_NAME: project.getName()]
            }
        }
    }
    packaging {
        resources {
            pickFirsts += ['META-INF/okio.kotlin_module']
        }
    }

    signingConfigs {
        release {
            keyAlias rootProject.keyAlias
            keyPassword rootProject.keyPassword
            storeFile file(rootProject.keyStore)
            storePassword rootProject.storePassword
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            signingConfig signingConfigs.release
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            buildConfigField 'String', 'TALKING_DATA_APP_ID', "\"$rootProject.talkingDataId\""
        }
        debug {
            minifyEnabled false
            signingConfig signingConfigs.release
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            buildConfigField 'String', 'TALKING_DATA_APP_ID', "\"$rootProject.talkingDataId\""
        }
    }
    buildFeatures {
        dataBinding true
        buildConfig true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    lint {
        checkReleaseBuilds true
        abortOnError false
    }

    flavorDimensions 'channel'

    productFlavors {
        official {
            dimension 'channel'
        }
    }

    // APK 文件名称格式 mine-version-channel.apk
    applicationVariants.all { variant ->

        // 渠道名称
        def productFlavorNames = variant.productFlavors.collect { it.name }
        if (productFlavorNames.isEmpty()) {
            productFlavorNames = [""]
        }
        def productFlavorName = productFlavorNames.join('')
        // 版本号
        def versionName = variant.mergedFlavor.versionName

        def fileName
        variant.outputs.all {
            if (variant.buildType.name.equals('release')) {
                fileName = "mine-${productFlavorName}-${versionName}.apk"
            } else if (variant.buildType.name.equals('debug')) {
                fileName = "mine-${productFlavorNames}-${versionName}-debug.apk"
            }
            outputFileName = fileName
        }
    }
}

apply plugin: 'com.coderpage.app'

uploader {
    apiServer = 'https://app.coderpage.com'
    token = rootProject.releaseToken
    appName = '我的记账本'
    changeLog = file("${rootDir}/source/changelog/${rootProject.appVersionName}/changelog.txt").text;
    isRelease = true
}

dependencies {
    api fileTree(include: ['*.jar'], dir: 'libs')
    api project(':libbase')
    api project(':libupdate')
    api rootProject.appCompat
    api rootProject.recyclerview
    api rootProject.design
    api rootProject.cardView
    api rootProject.materialCalendarview
    api rootProject.mpAndroidChart
    api rootProject.fastjson
    api rootProject.retrofit
    api rootProject.retrofitConverterFastjson
    api rootProject.okhttp3InterceptorLogging
    api rootProject.gson
    api rootProject.eventBus
    api rootProject.archRoomRuntime
    api rootProject.archLifecycleExtension
    api rootProject.archViewmodel
    api rootProject.archLiveData
    api rootProject.archLifecycleRuntime
    api rootProject.refreshLayout
    api rootProject.constraintLayout
    api rootProject.arounter

    api rootProject.multidex
    api rootProject.documentfile
    api rootProject.archWork
    api rootProject.excelPoi

    compileOnly rootProject.lombok
    annotationProcessor rootProject.lombok

    annotationProcessor rootProject.archLifecycleCompiler
    annotationProcessor rootProject.archRoomCompiler
    annotationProcessor rootProject.arounterProcessor
    testImplementation rootProject.junit
}
